# HDF5Plugin

./: CMakeLists.txt  INSTALL  Makefile  README.md  h5zlz4.c
doc/: CMakeLists.txt
doc/example/: .gitignore  CMakeLists.txt  Makefile
example/: PluginExample.cpp  README
include/: CMakeLists.txt
src/: CMakeLists.txt  h5zlz4.c
